--- a/src/components/timers/NewTimer.css
+++ b/src/components/timers/NewTimer.css
@@ -24,7 +24,7 @@
 
 .config-panel {
   max-width: 100%;
-  margin: 0 auto;
+  margin-left: 20px;
 }
 
 .back-to-workout {
@@ -42,7 +42,9 @@ button.add-timer-submit {
 @media (min-width: 855px) {
   .config-panel {
     max-width: 28%;
-    margin: 0 auto;
+    margin-right: 6em;
+    margin-left: 0;
+    float: right;
   }
 
   .back-to-workout {
